Fix bug for overflowing pictures and the card itself for MovieCard component

--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -1,30 +1,43 @@
 *{
-    margin: 0;
+    margin: 0px;
     padding: 0;
     box-sizing: border-box;
 }
-.card-container{
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
+
+.container{
+    display: inline-block;
+    margin: 10px 5px;
     width: 300px;
     height: 300px;
     background: linear-gradient( 120deg, #e24632cb , #dd88089f);
+    overflow: hidden;
+
 }
 
-.card-container .poster{
-    position: relative;    
+.container .card-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.container .card-container .poster{
+    position: relative;
+    width: 100%;
+    height: 250px;
+    overflow: hidden;
 }
 
 
-.card-container .poster img{
+.container .card-container .poster img{
     display: block;
-    min-height: 50px;
+    width: 100%;
+    min-height: 250px;
+    object-fit: cover;
     box-shadow: inset 0px 0px 15px 2px rgb(48, 61, 3);
+    filter: brightness(60%);
 }
 
 
-.card-container .poster .movie-like{
+.container .card-container .poster .movie-like{
     position: absolute;
     top: 5px;
     right: 10px;
@@ -36,7 +49,9 @@
     background: #22222255;
 }
 
-.card-container .movie-info{
+.container .card-container .movie-info{
+    display: block;
+    width: 100%;
     margin-top: auto;
-    color: white;
+    color: rgb(28, 35, 94);
 }
